@@ -1,3 +1,7 @@
+2023-06-13  Omar Polo  <op@omarpolo.com>
+
+	* regress/sha: remove regress/sha; sha256/sha256sum is no more required for the regress suite.
+
 2022-09-10  Omar Polo  <op@omarpolo.com>
 
 	* parse.y (string): retire the deprecated `mime' and `map' config options
